2002-03-23  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/comicspage: Moved all nando comics into here except Alex's
	restaurant.  New comics:
	Broom Hilda
	Cats with Hands
	Doodles
	Lewis
	Lola
	Loose Parts
	Meehan Streak
	Monkeyhouse
	Sylvia
	Willy 'N Ethel
	9 to 5
	Compu-toon
	Quigmans
	That's Jake
	* TODO: Added an item in globalization for language preference.
	* Netcomics/Factory.pm (load_RLI_files): Fixed syntax error
	introduced in previous version.

2002-03-20  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (load_RLI_files): fixed incorrectly
	creating spool dir or cleaning it out when $show_tasks is set.
	Thanks goes to Jerrad Pierce.

2002-03-20  Elliot Glaysher  <glaysher@umich.edu>

	* lib/slowwave (slowwave): Added slowwave, thanks to Roderick
	Schertler
	* MANIFEST.SKIP: Updated so it ignores the build dir for the
	netcomics-comicpage debian package.
	* lib/keenspot (elf): updated Elf Life so that it now follows the new
	consistent schedule.
	* contrib/show_zero_status.pl: Added script from my library to contrib

2002-03-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/ExternalUserAgent.pm: Fixed not testing proxy to see
	if it is defined before using it.

2002-03-07  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/doodie (doodie): Updated missing list.

2002-02-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/creators_syndicate (sb): Fixed Speed Bump function.
	* Makefile.PL: Added wiley to the list of old modules.

2002-02-24  Elliot Glaysher  <glaysher@umich.edu>

	* lib/ucomics (cd): Removed, since it appears a good deal of archives
	went down, and the comics has been discontinued.
	* MANIFEST, Makefile.PL: removed leftover traces of wiley. Thanks
	goes to Sven.

2002-02-23  Elliot Glaysher  <glaysher@umich.edu>

	* lib/ucomics (wiley): wiley is now in ucomics. Thanks to Shawn Oakey!
	* lib/wiley: Removed.
	
2002-02-21  Elliot Glaysher  <glaysher@umich.edu>
