@@ -148,7 +148,7 @@ sub avalon {
     my $date = strftime("%Y%m%d", @ltime);
     my $date2 = strftime("%Y%m%d", @ltime2);
 
-	# Last updated Feb. 7, 2002
+	# Last updated March 21, 2002
 	# For some reason, 20010211 and 20010325 don't downlaod properly.
     my @missing = (20000305,20000507,20000521,20000629,20000630,20000703,
       20000704,20000705,20000827,20000903,20000910,20000924,20001105,
@@ -162,7 +162,8 @@ sub avalon {
 	  20011128,20011129,20011130,20011202,20011203,20011204,20011205,
 	  20011206,20011207,20011209,20011217,20011218,20011219,20011220,
       20011221,20020120,20020121,20020122,20020123,20020124,20020125,
-	  20020127,20020128,20020129,20020130,20020131,20020201,20020203);
+	  20020127,20020128,20020129,20020130,20020131,20020201,20020203,
+	  20020210,20020218,20020219,20020220,20020221,20020222);
     my @extra = (20000401,20001223);
 
     #M to F until February 27, 2000
@@ -394,7 +395,7 @@ sub elf {
     my $date = strftime("%Y%m%d", @ltime);
     my $date2 = strftime("%Y%m%d", @ltime2);
 
-   # Last updated July 5, 2001
+	# Last updated March 21, 2002
     my @missing = (19990620,19990627,19990704,19990711,19990718,19990725,
       19990801,19990808,19990815,19990822,19990829,19990905,19990912,
       19990913,19990914,19990915,19990916,19990917,19990918,19990919,
